--- a/src/frameworks/vanilla_js/drag_and_drop_ui/index.html
+++ b/src/frameworks/vanilla_js/drag_and_drop_ui/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Drag and Drop UI Made by Manoj Tyagi using Vanilla JS</title>
+    <title>Drag and Drop UI Made by Robert Sawlton</title>
 
     <!-- Linking main css file -->
     <link rel="stylesheet" href="css/style.css">
